--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -230,7 +230,7 @@
                                         Spending Alert: We've noticed unusually high spending for your account.
                                     </div>
                                 </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="@Url.Action("Index", "TicketNotifications")">Show All</a>
+                                <a class="dropdown-item text-center small text-gray-500" href="@Url.Action("Index", "TicketNotifications")">Show All Notifications</a>
                             </div>
                         </li>
 
