--- a/Views/TicketNotifications/Index.cshtml
+++ b/Views/TicketNotifications/Index.cshtml
@@ -1,75 +1,36 @@
 ﻿@model IEnumerable<Bug_Tracker.Models.TicketNotification>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Notifications";
 }
 
 <h2>Notifications</h2>
 
-<p>
-    
-</p>
-
 <div class="card shadow mb-4">
     <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold">Tickets</h6>
+        <h6 class="m-0 font-weight-bold"></h6>
     </div>
     <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayName("Ticket Title")
-                        </th>
-                        <th>
-                            @Html.DisplayName("Sender")
-                        </th>
-                        <th>
-                            @Html.DisplayName("Recipient")
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Created)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.NotificationBody)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.IsRead)
-                        </th>
-                        <th></th>
-                    </tr>
-                </thead>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Ticket.Title)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Sender.DisplayName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Recipient.DisplayName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Created)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NotificationBody)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.IsRead)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                        </td>
-                    </tr>
-                }
-            </table>
-        </div>
+           
+        @foreach (var item in Model)
+        {
+            <div>
+                <div class="dropdown-list-image mr-3">
+                    <img class="rounded-circle" src="@item.Sender.AvatarPath" alt="">
+                </div>
+                <div>
+                    <div class="small text-gray-500">@item.Sender.DisplayName.ToString() · @item.Created.ToString("MMM dd,yyyy")</div>
+                    <span class="font-weight-bold">@item.NotificationBody</span>
+                    <div>@Html.DisplayFor(modelItem => item.IsRead)</div>
+                    <div>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    </div>
+                </div>
+            </div>
+        }
+            
     </div>
 </div>
 
