--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -92,8 +92,6 @@
                 </a>
             </div>
 
-
-
             <div class="nav-item active">
                 <a class="nav-link" href="@Url.Action("Index", "Tickets")">
                     <i class="fas fa-ticket-alt"></i>
@@ -101,7 +99,12 @@
                 </a>
             </div>
 
-
+            <div class="nav-item active">
+                <a class="nav-link" href="@Url.Action("Index", "TicketAttachments")">
+                    </i><i class="fas fa-paperclip"></i>
+                    <span>Tickets Attachments</span>
+                </a>
+            </div>
 
             <div class="nav-item active">
                 <a class="nav-link" href="@Url.Action("Index", "TicketHistories")">
