--- a/Views/TicketAttachments/Index.cshtml
+++ b/Views/TicketAttachments/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Ticket.SubmiterId)
+            @Html.DisplayNameFor(model => model.Ticket.SubmiterID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.User.FirstName)
@@ -32,7 +32,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Ticket.SubmiterId)
+            @Html.DisplayFor(modelItem => item.Ticket.SubmiterID)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.User.FirstName)
