--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Edit Ticket</h2>
 
 
-@using (Html.BeginForm( new { enctype = "Multipart/form-data" }))
+@using (Html.BeginForm( "Edit", "Tickets", FormMethod.Post, new { enctype = "Multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -60,6 +60,14 @@
                 @Html.ValidationMessageFor(model => model.TicketPriorityId, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group">
+            @Html.Label("File Upload", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("file", new { htmlAttributes = new { type= "file", id="fileUpload"} })
+                @Html.ValidationMessageFor(model => model.TicketAttachments, "", new { @class = "text-danger" })
+            </div>
+        </div> 
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
