--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNet.Identity
 @using Bug_Tracker.Helpers
+@using Bug_Tracker.Models
 <!DOCTYPE html>
 <html lang="en">
 
@@ -28,6 +29,10 @@
 </head>
 
 <body id="page-top">
+    @{ 
+        var db = new ApplicationDbContext();
+        var user = db.Users.Find(User.Identity.GetUserId());
+    }
 
     <!-- Page Wrapper -->
     <div id="wrapper">
@@ -212,8 +217,8 @@
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">@Html.Raw(User.Identity.GetUserName())</span>
-                                <img class="img-profile rounded-circle" src="~/Images/avatarPlaceholder.png" />
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">@user.DisplayName</span>
+                                <img class="img-profile rounded-circle" src="@user.AvatarPath"/>
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
