--- a/Views/TicketNotifications/Index.cshtml
+++ b/Views/TicketNotifications/Index.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Notifications";
 }
 
-<h2>Notifications</h2>
 
 <div class="card shadow mb-4">
     <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold"></h6>
+        <h6 class="m-0 font-weight-bold">Notifications</h6>
     </div>
     <div class="card-body">
            
