--- a/Views/TicketAttachments/Index.cshtml
+++ b/Views/TicketAttachments/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Bug_Tracker.Models.TicketAttachment>
+﻿@using Bug_Tracker.Helpers
+@model IEnumerable<Bug_Tracker.Models.TicketAttachment>
 
 @{
     ViewBag.Title = "Index";
@@ -9,7 +10,9 @@
 
 <table class="table">
     <tr>
-
+        <th>
+            @Html.DisplayName("File")
+        </th>
         <th>
             @Html.DisplayName("Submitter")
         </th>
@@ -27,7 +30,11 @@
 
 @foreach (var item in Model) {
     <tr>
-        
+        <td>
+            <a href="@item.FilePath">
+                <img src="@AttachmentHelper.GetIcon(item.FilePath)" style="width: 40px;"/>
+            </a>
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.User.DisplayName)
         </td>
