--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -42,7 +42,7 @@
                             @Html.DisplayNameFor(model => model.Discription)
                         </th>
                         <th>
-                            @Html.DisplayName("Assigned To")
+                            @Html.DisplayName("Assigned")
                         </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Created)
