--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
 
             <div class="nav-item active">
                 <a class="nav-link" href="@Url.Action("Index", "TicketAttachments")">
-                    </i><i class="fas fa-paperclip"></i>
+                    <i class="fas fa-paperclip"></i>
                     <span>Tickets Attachments</span>
                 </a>
             </div>
