--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -6,9 +6,13 @@
 
 <h2>Tickets</h2>
 
-<p>
-    <a class="btn btn-primary" href="@Url.Action("Create", "Tickets")">Create New</a>
-</p>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>
+        <a class="btn btn-primary" href="@Url.Action("Create", "Tickets")">Create New</a>
+    </p>
+}
+    
 
 
 <div class="card shadow mb-4">
@@ -50,7 +54,7 @@
                         <th>
                             @Html.DisplayNameFor(model => model.Updated)
                         </th>
-                        
+
                         <th></th>
                     </tr>
                 </thead>
@@ -88,7 +92,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Updated)
                         </td>
-                        
+
                         <td>
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                             @Html.ActionLink("Details", "Details", new { id = item.Id }) |
